{{$NEXT}}

 - No longer ignore duplicate access-group command in raw files,
   but abort instead.
 - No longer ignore header in JSON config for NSX.

3.020     2023-11-13 11:21:42+01:00 Europe/Berlin

 - Fixed issues in code for ASA:
   - Order of two adjacent ACL lines accidentally was swapped if first
     line was moved and second one was inserted.
   - An inserted or deleted ACL entry accidentally used a decremented
     line number if a leading ACL entry was already moved.
   - Timeout message is ignored if device is unreachable and
     'diamonds compare' was called with parameter '--brief'.

3.019     2023-10-26 15:16:42+02:00 Europe/Berlin

 - Use sequence number from 65535 downwards for crypto map dynamic in
   code for ASA. This matches the behaviour of the previous Perl version.

3.018     2023-10-23 15:38:38+02:00 Europe/Berlin

 - Bug fix in migrated code for ASA.
   The bug could occur in this situation:
   Two rules on device reference the same object-group A. These rules
   are changed to reference two different object-groups B and C.  In
   this case the original object-group A may get changed to values of
   both B and C.

3.017     2023-10-18 13:42:00+02:00 Europe/Berlin

 - Migrated approve for ASA from Perl to Go.
   In first step the new code is only used for selected device names,
   given in drc3.pl.
 - Files in "raw/ipv6/" are ignored now.

3.016     2023-08-28 16:27:32+02:00 Europe/Berlin

 - Mixed IPv4 and IPv6 configuration is allowed now in files directory "raw/".
   Files in "raw/ipv6/" should be merged into files in "raw/".
   Directory "raw/ipv6/" will be ignored from next version of this program.

3.015     2023-08-09 12:27:33+02:00 Europe/Berlin

 - Meta information about device is no longer read from header of
   generated code, but from new file DEVICE.info

3.014     2023-08-03 11:48:59+02:00 Europe/Berlin

 - Better check for out of sync from unexpected text in banner.

3.013     2023-08-02 11:30:50+02:00 Europe/Berlin
